[tool.poetry]
name = "insurance-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.137.1"
uvicorn = "^0.49.0"
pydantic = "^2.13.4"
requests = "^2.34.2"
langgraph = "^1.2.5"
langchain-core = "^1.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
